<resources>
    <string name="app_name">Tip Calc</string>
    <string name="billValue">Bill Value</string>
    <string name="enterBillValue">Enter BillV alue</string>
    <string name="EnterBillValue">Enter Bill Value</string>
    <string name="tip_label">Tip %:</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="tip18">18%</string>
    <string name="tipCustom">Custom</string>
    <string name="CustomPercent">Custom %:</string>
    <string name="tip_value">Tip:</string>
    <string name="Total_label">Total:</string>
    <string name="Reset">Reset</string>
    <string name="Calculate">Calculate</string>
    <string name="empty">0.00</string>
    <string name="defaultSLider">25%</string>
</resources>