<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/billValue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billTextNumber"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/EnterBillValue"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:text="@string/tip_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billValue" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="301dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/billTextNumber">

        <RadioButton
            android:id="@+id/tip10"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tip10" />

        <RadioButton
            android:id="@+id/tip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip15" />

        <RadioButton
            android:id="@+id/tip18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip18" />

        <RadioButton
            android:id="@+id/tipCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipCustom" />
    </RadioGroup>

    <TextView
        android:id="@+id/CustomPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/CustomPercent"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:max="50"
        android:progress="25"
        app:layout_constraintStart_toEndOf="@+id/CustomPercent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tipLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/tip_value"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomPercent" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/Total_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel2" />

    <TextView
        android:id="@+id/tipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/empty"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toEndOf="@+id/tipLabel2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/empty"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipValue" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="167dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalValue"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="164dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:text="@string/Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/totalValue"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/customValue"
        android:layout_width="57dp"
        android:layout_height="25dp"
        android:layout_marginTop="18dp"
        android:text="@string/defaultSLider"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>